# mysite

./: .env.template  .gitignore  Makefile  README.md  docker-compose.yaml  nginx.conf
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/requirements/: base.txt  local.txt  test.txt
backend/src/: tox.ini
backend/src/api/: urls.py
backend/src/api/filters/: __init__.py  film.py  review.py  user.py
backend/src/api/permissions/: __init__.py  is_admin_user_or_read_only.py  is_owner_or_read_only.py  is_reviewer_or_read_only.py  is_self_or_read_only.py  is_staff_or_read_only.py  is_unauthenticated_and_is_create.py  review_permission.py  superuser_all_staff_read_only.py
backend/src/api/serializers/: __init__.py  film.py  review.py  user.py
backend/src/api/tests/: test_config_view.py  test_film_viewset.py  test_review_viewset.py  test_user_viewset.py
backend/src/api/views/: __init__.py  config.py  film_viewset.py  login.py  (+5 more)
backend/src/authentication/: serializers.py  urls.py  views.py
backend/src/config/: __init__.py  api_v1_urls.py  asgi.py  celery.py  urls.py  views.py  wsgi.py
backend/src/demo/: create_sample_data.py
backend/src/films/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/src/mysite/: __init__.py  apps.py
backend/src/project/: settings.py  urls.py
backend/src/recommendations/: models.py
backend/src/reviews/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/src/users/: apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  user.py  views.py
(+170 files in other folders)
