[tool.poetry]
description = ""
package-mode = false
authors = [
    "James Ford <j.ford.91@hotmail.com>"
]

[tool.poetry.dependencies]
django-filter = "25.1"
djangorestframework = "3.16.0"
djangorestframework-camel-case = "1.4.2"
django = "5.2"
factory-boy = "3.3.3"
gunicorn = "23.0.0"
psycopg2-binary = "2.9.10"
pillow = "11.2.1"
python = ">=3.13"
social-auth-app-django = "5.4.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-extensions = "4.1"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-django = "^4.11.1"
pytest-flake8 = "^1.3.0"
pytest-pep8 = "^1.0.6"
tox = "^4.25.0"

